fix: fix markdown in index html file

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span>Phone: +79179701715</span><br>
                     <span>E-mail: hankmccoy@yandex.ru</span><br>
                     <span>Telegram: @ivannilov</span>   
-                <div>   
+                </div>  
             </div>
         </section>
         <section class="section" id="summary">
